[gd_scene load_steps=7 format=2]

[ext_resource path="res://Actor/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Actor/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://Asset/Mele Cupcake.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 326.497

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.78396, 20.5205 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.27806, 19.3134 )

[node name="Enemy R" type="KinematicBody2D" groups=["Enemy"]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="DetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource( 3 )

[node name="HitBox" type="Area2D" parent="."]
rotation = -3.14159
scale = Vector2( 18.7784, 1.65688 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.07988, -3.62125 )
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.81899e-12, 8 )
rotation = -3.14159
scale = Vector2( 18.7784, 1.65688 )
shape = SubResource( 1 )

[node name="EndOfGun" type="Position2D" parent="."]

[node name="GunDirection" type="Position2D" parent="."]

[node name="Health" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
